storage/app/public/files/igw.tf
//インターネットゲートウェイ定義
resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.main.id
}
